p44-extdev-elsner/p44motorexp: update to current p44utils

--- a/p44-extdev-elsner/src/Makefile.am
+++ b/p44-extdev-elsner/src/Makefile.am
@@ -31,14 +31,16 @@ p44extdevelsner_CXXFLAGS = \
   ${p44extdevelsner_DEBUG}
 
 p44extdevelsner_SOURCES = \
-  src/p44utils/p44obj.cpp \
-  src/p44utils/p44obj.hpp \
   src/p44utils/application.cpp \
   src/p44utils/application.hpp \
   src/p44utils/consolekey.cpp \
   src/p44utils/consolekey.hpp \
   src/p44utils/error.cpp \
   src/p44utils/error.hpp \
+  src/p44utils/extutils.cpp \
+  src/p44utils/extutils.hpp \
+  src/p44utils/fdcomm.cpp \
+  src/p44utils/fdcomm.hpp \
   src/p44utils/jsoncomm.cpp \
   src/p44utils/jsoncomm.hpp \
   src/p44utils/jsonobject.cpp \
@@ -47,14 +49,14 @@ p44extdevelsner_SOURCES = \
   src/p44utils/logger.hpp \
   src/p44utils/mainloop.cpp \
   src/p44utils/mainloop.hpp \
-  src/p44utils/fdcomm.cpp \
-  src/p44utils/fdcomm.hpp \
-  src/p44utils/socketcomm.cpp \
-  src/p44utils/socketcomm.hpp \
+  src/p44utils/p44obj.cpp \
+  src/p44utils/p44obj.hpp \
+  src/p44utils/p44utils_common.hpp \
   src/p44utils/serialcomm.cpp \
   src/p44utils/serialcomm.hpp \
+  src/p44utils/socketcomm.cpp \
+  src/p44utils/socketcomm.hpp \
   src/p44utils/utils.cpp \
   src/p44utils/utils.hpp \
-  src/p44utils/p44utils_common.hpp \
   src/p44utils_config.hpp \
   src/main.cpp
